--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.3.0"
   },
   "dependencies": {
-    "ionic-toast": "^0.2.0"
+    "ionic-toast": "^0.2.0",
+    "angular-local-storage": "^0.2.7"
   }
 }
