--- a/v2/client/ionic.project
+++ b/v2/client/ionic.project
@@ -1,4 +1,8 @@
 {
   "name": "client",
-  "app_id": ""
+  "app_id": "",
+  "proxies": [{
+    "path": "/api/",
+    "proxyUrl": "http://dev.neemaa.com/api"
+  }]
 }
