--- a/api/.env.example
+++ b/api/.env.example
@@ -1,5 +1,5 @@
-APP_ENV=production
-APP_DEBUG=false
+APP_ENV=local
+APP_DEBUG=true
 APP_KEY=base64:+IMGdtfTGoUbcuO+Z4BQN8Lej2iidGm/j679BUrM7KA=
 APP_URL=http://localhost
 
